fixing swager
